create github pages

--- a/page10.html
+++ b/page10.html
@@ -58,45 +58,57 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="12" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/j">design your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="12" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2"><p>&nbsp; &nbsp; Zuuth醫美原液介紹</p></h3>
-                <small class="mbr-section-subtitle"><span style="font-style: normal;">讓你們更了解 這些原液的來源及功效</span></small>
+                <small class="mbr-section-subtitle"><span style="font-style: normal;">單一功效 就更有效<br>讓你們更了解 這些原液的來源及功效</span></small>
             </div>
         </div>
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2y" data-rv-view="14" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="171" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
-                <figure class="mbr-figure">
-                    <div><img src="assets/images/1-1400x973.png"></div>
-
-                    
-
-                </figure>
-            </div>
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-style: normal;">全台超過三百家醫美院所使用的保養品</span><br></p><p><span style="font-style: normal;">每個女人都應該有專屬自己的保養品，這是一個為您特選的保養品</span></p><p><span style="font-style: normal;">「我的醫美」精華系列</span></p><p><span style="font-style: normal;"><br></span></p><p><span style="font-style: normal;">因為知道您對功效的要求</span></p><p><span style="font-style: normal;">所以特別注重單一功效</span></p><p><span style="font-style: normal;">並且把它做到更好</span></p><p><span style="font-style: normal;">因為知道您有特別的需求</span></p><p><span style="font-style: normal;">所以有不同的功效供您選擇</span></p><p><span style="font-style: normal;">因為知道您對高品質的要求</span></p><p><span style="font-style: normal;">所以帶給您醫美品質的標準</span></p></blockquote></div>
         </div>
     </div>
+
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-30" data-rv-view="16" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="173" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>× 針對不同需求選定需要的原液</p><p>× 本產品是高純度醫美級，每次只需0.5ml即可，當然貴婦請任性盡情使用（笑）。</p><p><br></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="179" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-style: normal;">［ 建議搭配 ］</span></p><p><span style="font-style: normal;">修護奇蹟組：智慧微導藍銅生肽、黃金洋甘菊、膠原玻尿酸</span></p><p><span style="font-style: normal;">緊緻抗皺組：金箔六胜肽魚子、蝸牛EGF精華、膠原玻尿酸</span></p><p><span style="font-style: normal;">煥顏提亮組：胜肽酸原液、智慧微導藍銅生肽、傳明酸</span></p><p><span style="font-style: normal;">奢華自用組：3000ppm藍銅胜肽、金箔六胜肽魚子</span></p></blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="181" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <figure class="mbr-figure">
-                    <div><img src="assets/images/-1400x988.png"></div>
-
-                    
-
-                </figure>
+                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">詳細原液介紹</a> </div>
             </div>
         </div>
     </div>
+
 </section>
 
 
