create github pages

--- a/page7.html
+++ b/page7.html
@@ -64,8 +64,8 @@
             </div>
             <div class="col-xs-12 col-md-6 col-xl-4">
                 <div class="mbr-plan card text-xs-center">
-                    <div class="mbr-plan-header card-block bg-primary">
-                      <div class="mbr-plan-label">HOT!</div>
+                    <div class="mbr-plan-header card-block">
+                      
                       <div class="card-title">
                         <h3 class="mbr-plan-title"><br>修理 乾燥肌膚換回水嫩</h3>
                         <small class="mbr-plan-subtitle"></small>
@@ -113,7 +113,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
