--- a/news.html
+++ b/news.html
@@ -23,7 +23,18 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section-hero mbr-section-full header2" id="header6-5r" data-rv-view="173" style="background-image: url(assets/images/1501338106550-796x591.jpg);">
+<section class="mbr-section mbr-section__container article" id="header3-5u" data-rv-view="180" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">最新消息</span></h3>
+                <small class="mbr-section-subtitle"><span style="font-style: normal;">2017.9.1</span><br></small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2" id="header6-5r" data-rv-view="173" style="background-image: url(assets/images/1501338106550-796x591.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -64,8 +75,19 @@
 
 </section>
 
+<section class="mbr-section mbr-section__container article" id="header3-5s" data-rv-view="176" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2"></h3>
+                <small class="mbr-section-subtitle">&nbsp;<br><br></small>
+            </div>
+        </div>
+    </div>
+</section>
 
-  <section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
