create github pages

--- a/page6.html
+++ b/page6.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free site maker</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="46" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="46" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">——————<br>：附加項目：<br>&nbsp;——————</h3>
-                <small class="mbr-section-subtitle"><br><span style="font-style: normal;">&nbsp;雙手嫩白&nbsp;</span>$CONTENT$nbsp;<span style="font-style: normal;">300<br>手背淨白&nbsp;</span>$CONTENT$nbsp;<span style="font-style: normal;">100<br>腳背淨白&nbsp;</span>$CONTENT$nbsp;<span style="font-style: normal;">150<br>&nbsp;胸前淨白&nbsp;</span>$CONTENT$nbsp;<span style="font-style: normal;">300</span><br><br></small>
+                <small class="mbr-section-subtitle"><br><span style="font-style: normal;">&nbsp;雙手嫩白＄300</span><br><span style="font-style: normal;">手背淨白&nbsp;＄100</span><br><span style="font-style: normal;">腳背淨白&nbsp;＄150</span><br><span style="font-style: normal;">&nbsp;胸前淨白&nbsp;＄300<br></span><br></small>
             </div>
         </div>
     </div>
