create github pages

--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section__container article" id="header3-5u" data-rv-view="180" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-5u" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -34,7 +34,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2" id="header6-5r" data-rv-view="173" style="background-image: url(assets/images/1501338106550-796x591.jpg);">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2" id="header6-5r" data-rv-view="92" style="background-image: url(assets/images/1501338106550-796x591.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-5s" data-rv-view="176" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-5s" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
