--- a/page14.html
+++ b/page14.html
@@ -25,9 +25,9 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="10">
+<section id="ext_menu-5a" data-rv-view="30">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="https://mobirise.com">高雄・休修臉・美學&nbsp;</a>
+                        <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
                     </div>
 
                 </div>
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://mobirise.com/">BUY</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="menu.html" target="_blank">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5b" data-rv-view="12" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5b" data-rv-view="32" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5d" data-rv-view="14" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5d" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-5e" data-rv-view="16" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-5e" data-rv-view="36" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -89,7 +89,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-5n" data-rv-view="20" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-5n" data-rv-view="38" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -151,7 +151,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-5o" data-rv-view="23" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-5o" data-rv-view="41" style="background-color: rgb(255, 255, 255);">
 
     
 
