--- a/products.html
+++ b/products.html
@@ -25,9 +25,9 @@
   
 </head>
 <body>
-<section id="ext_menu-3a" data-rv-view="39">
+<section id="ext_menu-3a" data-rv-view="16">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption text-white" href="https://mobirise.com">高雄・休修臉・美學&nbsp;</a>
+                        <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
                     </div>
 
                 </div>
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://mobirise.com/">BUY</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="menu.html" target="_blank">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="10" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,14 +69,14 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="35">
+<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="12">
     <div class="mbr-figure">
         <div><img src="assets/images/q1-1-1400x437.jpg"></div>
         
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="37" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="14" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
