--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="183" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="183" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">最新消息</h3>
-                <small class="mbr-section-subtitle"><span style="font-style: normal;">2017.9.1</span><br></small>
+                <small class="mbr-section-subtitle">&nbsp;</small>
             </div>
         </div>
     </div>
