create github pages

--- a/page7.html
+++ b/page7.html
@@ -75,7 +75,7 @@
                             <span class="mbr-price-value">體驗價$</span>
                             <span class="mbr-price-figure"></span><small class="mbr-price-term"><strong>699</strong>/ 90min.<br></small>
                           </div>
-                          <small class="mbr-plan-price-desc"><br><span style="font-style: normal;">適合乾燥肌膚，一些粉刺問題，清除粉刺後補水，補足保濕促進肌膚柔嫩，打造水亮肌。<br>（拔粉刺/手清粉刺/基礎保濕導入/海洋軟膜）</span><br></small>
+                          <small class="mbr-plan-price-desc"><br><span style="font-style: normal;">適合乾燥肌膚，一些粉刺問題，清除粉刺後補水，補足保濕促進肌膚柔嫩，打造水亮肌。<br></span><br><span style="font-style: normal;">（拔粉刺/手清粉刺/基礎保濕導入/海洋軟膜）</span><br></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
@@ -97,7 +97,7 @@
                             <span class="mbr-price-value">體驗價$</span>
                             <span class="mbr-price-figure"><strong>699</strong></span><small class="mbr-price-term">/ 90min.</small>
                           </div>
-                          <small class="mbr-plan-price-desc"><br><span style="font-style: normal;">適合善敏感、乾燥、脫穴問題的肌膚，清除粉刺後加強舒緩安定，緩和皮膚發炎泛紅反應。<br>（拔粉刺/手清粉刺/舒緩導入/抗敏消炎軟膜）</span></small>
+                          <small class="mbr-plan-price-desc"><br><span style="font-style: normal;">適合善敏感、乾燥、脫穴問題的肌膚，清除粉刺後加強舒緩安定，緩和皮膚發炎泛紅反應。<br></span><br><span style="font-style: normal;">（拔粉刺/手清粉刺/舒緩導入/抗敏消炎軟膜）</span></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
@@ -113,7 +113,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
