--- a/page18.html
+++ b/page18.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-64" data-rv-view="235">
+<section id="ext_menu-64" data-rv-view="213">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web page maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="232" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="210" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
