--- a/page10.html
+++ b/page10.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-5a" data-rv-view="85">
+<section id="ext_menu-5a" data-rv-view="119">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web page maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="87" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2n" data-rv-view="121" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="89" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content2-54" data-rv-view="123" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="91" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-55" data-rv-view="125" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -89,7 +89,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="93" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-58" data-rv-view="127" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -99,7 +99,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-59" data-rv-view="129" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
