--- a/page20.html
+++ b/page20.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-76" data-rv-view="247">
+<section id="ext_menu-76" data-rv-view="63">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="61" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-7d" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-7d" data-rv-view="67" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -82,7 +82,7 @@
                   <h3 class="mbr-section-title display-2">韓國角蛋白美睫</h3>
                   <div class="lead">
 
-                    <p>uplash 翹睫毛 👁️👁️<br>韓國角蛋白美睫<br>真。睫毛 反地心吸力，睫毛自然開花.<br>😎😎😎<br>養護妳的真睫毛，可以讓睫毛更健康哦<br>過程不燻眼、溫和不刺激<br>自體睫毛無異物感、0負擔<br>捲翹度可維持5～8周以上都可以<br>（看每個人生活習慣、搓揉眼睛或是卸妝方法都會影響喔）<br><br>✔️改善睫毛弧度：令眼形更亮麗更突出<br>✔️改善睫毛下垂：因眼皮過厚/過重<br>✔️改善睫毛倒插：杜絕睫毛倒插，過度揉眼<br>✔️改善眼妝問題：無需夾睫毛，不怕睫毛膏過重<br>✔️改善植睫毛： 不怕嫁接睫毛過長/過重，導致容易脫落和不翹<br><br><br>讓妳的眼神自然放大、睫毛健康纖長～<br>只要1小時左右便可以擁有像夾過睫毛及根根分明的效果，自然又有神🧐<br>重點重點！日常生活可以不用照顧，可以正常洗臉、化妝、卸妝<br><br>不用怕嫁接睫毛那種掉到參差不齊的感覺，要多自然就多自然 ❤️<br><br>$單次價：1380</p>
+                    <p>uplash 翹睫毛 👁️👁️<br>韓國角蛋白美睫<br>真。睫毛 反地心吸力，睫毛自然開花.<br>😎😎😎<br>養護妳的真睫毛，可以讓睫毛更健康哦<br>過程不燻眼、溫和不刺激<br>自體睫毛無異物感、0負擔<br>捲翹度可維持5～8周以上都可以<br>（看每個人生活習慣、搓揉眼睛或是卸妝方法都會影響喔）<br><br>✔️改善睫毛弧度：令眼形更亮麗更突出<br>✔️改善睫毛下垂：因眼皮過厚/過重<br>✔️改善睫毛倒插：杜絕睫毛倒插，過度揉眼<br>✔️改善眼妝問題：無需夾睫毛，不怕睫毛膏過重<br>✔️改善植睫毛： 不怕嫁接睫毛過長/過重，導致容易脫落和不翹<br><br><br>讓妳的眼神自然放大、睫毛健康纖長～<br>只要1小時左右便可以擁有像夾過睫毛及根根分明的效果，自然又有神🧐<br>重點重點！日常生活可以不用照顧，可以正常洗臉、化妝、卸妝<br><br>不用怕嫁接睫毛那種掉到參差不齊的感覺，要多自然就多自然 ❤️<br><br>定價：$2500<br>優惠價：$1380<br><br></p>
 
                   </div>
 
@@ -103,7 +103,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-77" data-rv-view="248" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-77" data-rv-view="65" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
