create github pages

--- a/page24.html
+++ b/page24.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Generator Description">
-  <title>products</title>
+  <title>Page 24</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -16,8 +16,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-3a" data-rv-view="170">
+<section id="ext_menu-80" data-rv-view="321">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,43 +58,13 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="164" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"></h3>
-                <small class="mbr-section-subtitle">&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;</small>
-            </div>
-        </div>
-    </div>
-</section>
 
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="166">
-    <div class="mbr-figure">
-        <div><img src="assets/images/q1-1-1400x437.jpg"></div>
-        
-    </div>
-</section>
-
-<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="168" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-black" href="page10.html" target="_blank">zuuth醫美原液</a> <a class="btn btn-black" href="page12.html" target="_blank">zuuth保養產品</a>   </div>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
