--- a/page18.html
+++ b/page18.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-64" data-rv-view="277">
+<section id="ext_menu-64" data-rv-view="217">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="274" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="214" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
