--- a/page20.html
+++ b/page20.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-76" data-rv-view="63">
+<section id="ext_menu-76" data-rv-view="253">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="61" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="251" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-7d" data-rv-view="67" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-7d" data-rv-view="257" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -103,7 +103,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-77" data-rv-view="65" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-77" data-rv-view="255" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
