create github pages

--- a/page9.html
+++ b/page9.html
@@ -50,8 +50,8 @@
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
-                            <span class="mbr-price-value">體驗價$</span>
-                            <span class="mbr-price-figure">999</span><small class="mbr-price-term">/80min.</small>
+                            <span class="mbr-price-value">單次價$</span>
+                            <span class="mbr-price-figure">1499</span><small class="mbr-price-term">/80min.</small>
                           </div>
                           <small class="mbr-plan-price-desc"></small>
                       </div>
@@ -72,8 +72,8 @@
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
-                            <span class="mbr-price-value">體驗價$</span>
-                            <span class="mbr-price-figure">800</span><small class="mbr-price-term">/80min.</small>
+                            <span class="mbr-price-value">單次價$</span>
+                            <span class="mbr-price-figure">1299</span><small class="mbr-price-term">/80min.</small>
                           </div>
                           <small class="mbr-plan-price-desc"></small>
                       </div>
@@ -96,8 +96,8 @@
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
-                            <span class="mbr-price-value">體驗價$</span>
-                            <span class="mbr-price-figure">699</span><small class="mbr-price-term">/ 100min.</small>
+                            <span class="mbr-price-value">單次價$</span>
+                            <span class="mbr-price-figure">999</span><small class="mbr-price-term">/ 100min.</small>
                           </div>
                           <small class="mbr-plan-price-desc">More details</small>
                       </div>
@@ -115,7 +115,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/c">website maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
