--- a/page7.html
+++ b/page7.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-section" id="pricing-table2-1t" data-rv-view="350" style="padding-top: 40px; padding-bottom: 160px;">
+<section class="mbr-section" id="pricing-table2-1t" data-rv-view="84" style="padding-top: 40px; padding-bottom: 160px;">
 
     
 
@@ -113,7 +113,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/e">website authoring software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
