--- a/page24.html
+++ b/page24.html
@@ -34,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
+                        <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
                         <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
                     </div>
 
@@ -59,7 +59,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/j">how to design a website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
